--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -9,6 +9,8 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Arimo:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header>
@@ -19,7 +21,16 @@
 	<div id="main">
 		<div class="inner">
 			<div class="classside">
-				
+				<ul class="classlist">
+					<li class="class">
+						<div class="top-label">
+							INFO 2300: Intermediate Web Development
+						</div>
+						<div class="bottom-options">
+
+						</div>
+					</li>
+				</ul>
 			</div>
 			<div class="scheduleside">
 				<div class="day-labels">
