you have to ask the cutie before you touch the booty

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -23,11 +23,18 @@
 			<div class="classside">
 				<ul class="classlist">
 					<li class="class">
-						<div class="top-label">
-							INFO 2300: Intermediate Web Development
+						<div class="toggle">
+							<i class="icon-check-box on-icon"></i>
+							<i class="icon-check-box-outline-blank off-icon"></i>
 						</div>
-						<div class="bottom-options">
-
+						<div class="close">
+							<i class="icon-close"></i>
+						</div>
+						<div class="top-section">
+							INFO 2300: Intermediate Web Dev...
+						</div>
+						<div class="bottom-section">
+							LEC 001
 						</div>
 					</li>
 				</ul>
