--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -35,14 +35,30 @@
 							<i class="icon-close"></i>
 						</div>
 						<div class="top-section">
-							INFO 2300: Intermediate Web Dev...
+							<a class="cq-display" href="javascript:void(0);">INFO 2300: Intermediate Web Dev...</a>
 						</div>
 						<div class="bottom-section">
-							<div class="group first">
-								LEC 001
+							<div class="class-section-group first">
+								<i class="icon-arrow-drop-down expand-icon"></i>
+								<div class="class-section-option">
+									LEC 001
+								</div>
+<!-- 								<div class="class-section-option">
+									LEC 002
+								</div> -->
 							</div>
-							<div class="group">
-								
+							<div class="class-section-group">
+								<div class="class-section-option">
+									DIS 001
+								</div>
+<!-- 								<div class="class-section-option">
+									DIS 002
+								</div> -->
+							</div>
+							<div class="class-section-group">
+								<div class="class-section-option">
+									SEM 001
+								</div>
 							</div>
 						</div>
 					</li>
