my anaconda dont want none unless you got buns hon

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -99,8 +99,14 @@
 		</div>
 	</div>
 	<!-- TODO -->
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
-	<script src="/assets/js/jquery.min.js"></script>
-	<script src="/assets/js/js-built.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<!-- // <script src="/assets/js/js-built.js"></script> -->
+	<script src="/assets/js/underscore-min.js"></script>
+	<script src="/assets/js/html2canvas.js"></script>
+	<script src="/assets/js/jquery.autocomplete.js"></script>
+	<script src="/assets/js/jst.js"></script>
+	<script src="/assets/js/components.js"></script>
+	<script src="/assets/js/init.js"></script>
+	<script src="/assets/js/setup.js"></script>
 </body>
 </html>
