workin all week 9 to 5 for my money

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -104,6 +104,7 @@
 	<script src="/assets/js/underscore-min.js"></script>
 	<script src="/assets/js/html2canvas.js"></script>
 	<script src="/assets/js/jquery.autocomplete.js"></script>
+	<script src="/assets/js/global.js"></script>
 	<script src="/assets/js/jst.js"></script>
 	<script src="/assets/js/components.js"></script>
 	<script src="/assets/js/init.js"></script>
