--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -99,9 +99,10 @@ header {
 		.class-list {
 			padding: 0;
 
-			.class {
+			.class-info {
 				position: relative;
 				list-style: none;
+				margin-bottom: 15px;
 				@include tiny-shadow();
 
 				.close {
