--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -1,5 +1,5 @@
-@import "components/ChequerdApp";
-@import "components/ChequerdHeader";
+@import "components/DHApp";
+@import "components/DHHeader";
 
 .cq-toggle {
 	position: absolute;
