--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,7 +7,7 @@
     <script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-    <div id="chequerd-app-mount"><%- reactOutput %></div>
+    <div id="davyhoy-app-mount"><%- reactOutput %></div>
 
     <script id='context' type='application/json'>
         <%- context %>
