--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -2,3 +2,4 @@
 @import "components/DHHeader";
 @import "components/DHBasket";
 @import "components/DHSchedule";
+@import "components/DHCourseAdder";
