--- a/app/styles/components/_DHBasket.scss
+++ b/app/styles/components/_DHBasket.scss
@@ -1,55 +1,19 @@
-#dh-basket {
+.dh-basket {
     @include span(3.4 of 12);
-    padding-top: 24px;
+    padding-top: 55px;
 
-    .search-item {
-        position: relative;
-        background: #FFFFFF;
-        box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.15);
-        border-radius: 3px;
-        height: 30px;
-
-        .icon {
-            position: absolute;
-            color: #AEAEAE;
-            font-size: 23px;
-            left: 6px;
-            top: 2px;
+    &.empty {
+        .empty-label {
+            display: block;
         }
+    }
 
-        .input-wrapper {
-            position: absolute;
-            top: 0;
-            left: 35px;
-            right: 0;
-            bottom: 0;
-        }
-
-        input {
-            height: 100%;
-            width: 100%;
-            background: transparent;
-            margin: 0;
-            border: 0;
-            box-sizing: border-box;
-            outline: none;
-            font-size: 13px;
-            text-indent: 1px;
-            color: #424242;
-
-
-            @include placeholder {
-                color: #AEAEAE;
-                text-transform: uppercase;
-                font-size: 11px;
-                position: relative;
-                top: 1px;
-                left: 2px;
-                letter-spacing: .32em;
-                font-weight: 300;
-                font-family: 'bunt';
-                text-indent: 1px;
-            }
-        }
+    .empty-label {
+        display: none;
+        margin-top: 94px;
+        text-align: center;
+        font-size: 21px;
+        color: #C4C4C4;
+        letter-spacing: .1em;
     }
 }
