--- a/app/styles/components/_DHSchedule.scss
+++ b/app/styles/components/_DHSchedule.scss
@@ -1,41 +1,48 @@
-#dh-schedule {
+$rowHeight: 50px;
+
+.dh-schedule {
     @include span(8.6 of 12 last);
+    padding-top: 28px;
 
     > .left {
-        @include span(1 of 12);
+        @include span(.9 of 12);
+        text-align: right;
+        padding-top: 21px;
     }
 
     > .right {
-        @include span(11 of 12 last);
+        @include span(11.1 of 12 last);
     }
 
     .schedule-area {
         background: #FFFFFF;
         box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.15);
         border-radius: 4px;
+    }
 
+    .day-labels {
+        @extend .cf;
+        padding-bottom: 11px;
     }
 
     .day-label {
-        @include span(1 of 7);
+        width: percentage(1/7);
         display: inline-block;
         text-align: center;
+        font-size: 15px;
         color: #D1D1D1;
         letter-spacing: .1em;
-
-        &:last-child {
-            @include span(1 of 7 last);
-        }
     }
 
     .hour-label {
-        font-size: 16px;
+        height: $rowHeight;
+        font-size: 15px;
         color: #D1D1D1;
         letter-spacing: .05em;
     }
 
     .calendar-row {
-        height: 50px;
+        height: $rowHeight;
 
         &:nth-child(odd) {
             background: #EDEDED;
