--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -13,7 +13,7 @@
         <%- context %>
     </script>
 
-    <script src="/assets/js-built/app.js"></script>
+    <script src="/assets/js/main.js"></script>
 
 </body>
 </html>
