renamed project to Davyapp

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -1,5 +1,5 @@
-@import "components/DHApp";
-@import "components/DHHeader";
-@import "components/DHBasket";
-@import "components/DHSchedule";
-@import "components/DHCourseAdder";
+@import "components/DAApp";
+@import "components/DAHeader";
+@import "components/DABasket";
+@import "components/DASchedule";
+@import "components/DACourseAdder";
