--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -3,3 +3,4 @@
 @import "components/DABasket";
 @import "components/DASchedule";
 @import "components/DACourseAdder";
+@import "components/DACourseItem";
