--- a/app/styles/components/_DACourseAdder.scss
+++ b/app/styles/components/_DACourseAdder.scss
@@ -1,16 +1,14 @@
 .da-course-adder {
-    position: relative;
-    background: #FFFFFF;
-    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.15);
-    border-radius: 3px;
-    height: 30px;
+    @include basket-item();
+    height: 35px;
+    margin-bottom: 12px;
 
     .icon {
         position: absolute;
         color: #AEAEAE;
-        font-size: 23px;
-        left: 6px;
-        top: 2px;
+        font-size: 22px;
+        left: 7px;
+        top: 6px;
     }
 
     .input-wrapper {
@@ -30,7 +28,7 @@
         padding: 0 8px 0 32px;
         box-sizing: border-box;
         outline: none;
-        font-size: 13px;
+        font-size: 12px;
         text-indent: 1px;
         color: #424242;
 
