--- a/app/styles/components/_DACourseItem.scss
+++ b/app/styles/components/_DACourseItem.scss
@@ -1,3 +1,76 @@
 .da-course-item {
+    @include basket-item();
+    height: 184px;
 
+    .item-header {
+        height: 35px;
+        border-radius: 3px 3px 0 0;
+        color: white;
+        font-size: 13px;
+        padding: 12px 0px 0 33px;
+        box-sizing: border-box;
+        font-weight: 400;
+
+        .da-toggle {
+            position: absolute;
+            height: 35px;
+            width: 30px;
+            top: 0px;
+            left: 0px;
+        }
+
+        .da-close {
+            position: absolute;
+            height: 35px;
+            width: 30px;
+            right: 0;
+            top: 0;
+            text-align: center;
+            font-size: 23px;
+            padding-top: 5px;
+            padding-right: 3px;
+        }
+    }
+
+    .item-content {
+        padding: 12px 10px 0;
+
+        .professor {
+            font-size: 14px;
+            color: #535353;
+            line-height: 15px;
+        }
+
+        .credits {
+            font-size: 12px;
+            color: #535353;
+            font-weight: 500;
+            margin-top: 2px;
+        }
+
+        .description {
+            font-size: 12px;
+            color: #838383;
+            margin-top: 12px;
+            line-height: 1.42;
+            font-weight: 500;
+        }
+    }
+
+    .button-area {
+        font-size: 0;
+        position: absolute;
+        bottom: 9px;
+        left: 7px;
+
+        button {
+            margin-right: 13px;
+        }
+    }
+
+    &.blue {
+        .item-header {
+            background: $da-blue;
+        }
+    }
 }
