added remove and toggle courses

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -4,3 +4,5 @@
 @import "components/DASchedule";
 @import "components/DACourseAdder";
 @import "components/DACourseItem";
+@import "components/DAToggle";
+@import "components/DAColorPanel";
