renamed project cornellapp

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -1,8 +1,8 @@
-@import "components/DAApp";
-@import "components/DAHeader";
-@import "components/DABasket";
-@import "components/DASchedule";
-@import "components/DACourseAdder";
-@import "components/DACourseItem";
-@import "components/DAToggle";
-@import "components/DAColorPanel";
+@import "components/CAApp";
+@import "components/CAHeader";
+@import "components/CABasket";
+@import "components/CASchedule";
+@import "components/CACourseAdder";
+@import "components/CACourseItem";
+@import "components/CAToggle";
+@import "components/CAColorPanel";
