--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -1,4 +1,4 @@
-.da-outline-button {
+.ca-outline-button {
     background: none;
     border: 1px solid #F2F2F2;
     color: #F2F2F2;
@@ -21,7 +21,7 @@
     }
 }
 
-.da-fill-button {
+.ca-fill-button {
     background: rgba(56, 56, 56, 0.15);
     border: none;
     outline: none;
@@ -43,7 +43,7 @@
     }
 }
 
-.da-simple-button {
+.ca-simple-button {
     font-size: 9px;
     color: #C4C4C4;
     letter-spacing: .27em;
@@ -60,7 +60,7 @@
     }
 }
 
-.da-close {
+.ca-close {
     color: white;
     cursor: pointer;
     font-size: 19px;
