--- a/app/styles/components/_CAColorPanel.scss
+++ b/app/styles/components/_CAColorPanel.scss
@@ -1,4 +1,4 @@
-.da-color-panel {
+.ca-color-panel {
     background: rgba(255,255,255,0.92);
     padding: 12px 10px 0px;
     @include transition(.09s all ease-in-out);
@@ -66,7 +66,7 @@
             }
         }
 
-        @each $color-name, $color in $da-colors {
+        @each $color-name, $color in $ca-colors {
             &.#{$color-name} {
                 background: $color;
             }
