--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -2,7 +2,7 @@
 @import "components/CAHeader";
 @import "components/CABasket";
 @import "components/CASchedule";
-@import "components/CACourseAdder";
-@import "components/CACourseItem";
+@import "components/CABasketAdder";
+@import "components/CABasketItem";
 @import "components/CAToggle";
 @import "components/CAColorPanel";
