--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -2,6 +2,7 @@
 @import "components/CAHeader";
 @import "components/CABasket";
 @import "components/CASchedule";
+@import "components/CAScheduleItem";
 @import "components/CABasketAdder";
 @import "components/CABasketItem";
 @import "components/CAToggle";
