--- a/app/styles/components/_CAScheduleItem.scss
+++ b/app/styles/components/_CAScheduleItem.scss
@@ -1,3 +1,81 @@
 .ca-schedule-item {
 
+    .schedule-meeting {
+
+    }
+
+    .schedule-instance-wrap {
+        position: absolute;
+        width: percentage(1 / 7);
+
+        $day-map: (
+            'monday': 0,
+            'tuesday': 1,
+            'wednesday': 2,
+            'thursday': 3,
+            'friday': 4,
+            'saturday': 5,
+            'sunday': 6,
+        );
+
+        @each $day, $percent in $day-map {
+            &.#{$day} {
+                left: percentage($percent / 7);
+            }
+        }
+
+        &.compact {
+            .instance-headline {
+                font-size: 11px;
+            }
+        }
+    }
+
+    .schedule-instance {
+        position: absolute;
+        padding-top: 11px;
+        top: 0;
+        bottom: 0;
+        left: 1px;
+        right: 1px;
+        box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.20);
+        border-radius: 3px;
+        box-sizing: border-box;
+        color: white;
+        text-align: center;
+        font-size: 14px;
+        @include transition(.13s background ease-in-out);
+
+        .instance-headline {
+            font-size: 13px;
+            font-weight: 500;
+        }
+
+        .instance-location {
+            font-size: 10px;
+            margin-top: 4px;
+        }
+
+        hr {
+            border: 0;
+            background: rgba(255, 255, 255, .2);
+            height: 1px;
+            margin: 7px 22px;
+        }
+
+        .instance-section-type {
+            font-size: 11px;
+        }
+
+        .instance-time {
+            font-size: 8px;
+            margin-top: 3px;
+        }
+    }
+
+    @each $color-name, $color in $ca-colors {
+        &.#{$color-name} .schedule-instance {
+            background: $color;
+        }
+    }
 }
