--- a/app/styles/components/_CAScheduleItem.scss
+++ b/app/styles/components/_CAScheduleItem.scss
@@ -1,12 +1,13 @@
 .ca-schedule-item {
 
-    .schedule-meeting {
+    .schedule-section {
 
     }
 
     .schedule-instance-wrap {
         position: absolute;
         width: percentage(1 / 7);
+        @include user-select(none);
 
         $day-map: (
             'monday': 0,
@@ -25,15 +26,14 @@
         }
 
         &.compact {
-            .instance-headline {
-                font-size: 11px;
+            .schedule-instance hr {
+                display: none;
             }
         }
     }
 
     .schedule-instance {
         position: absolute;
-        padding-top: 11px;
         top: 0;
         bottom: 0;
         left: 1px;
@@ -44,10 +44,19 @@
         color: white;
         text-align: center;
         font-size: 14px;
-        @include transition(.13s background ease-in-out);
+        cursor: pointer;
+        @include transition(.13s all ease-in-out);
+
+        .instance-wrap {
+            position: absolute;
+            left: 0;
+            right:0;
+            top: 50%;
+            @include transform(translate(0,-50%));
+        }
 
         .instance-headline {
-            font-size: 13px;
+            font-size: 11px;
             font-weight: 500;
         }
 
@@ -63,13 +72,14 @@
             margin: 7px 22px;
         }
 
-        .instance-section-type {
-            font-size: 11px;
+        .instance-time {
+            font-size: 9px;
+            margin-top: 3px;
         }
 
-        .instance-time {
-            font-size: 8px;
-            margin-top: 3px;
+        &:hover {
+            border: 1px solid #f8f8f8;
+            // border: 1px solid #515151;
         }
     }
 
